# river-telemetry-simulation

./: .gitignore  Cargo.toml  README.md  go.mod  input.go  main.go  notebook.ipynb  options.json  options.toml  output.go  run.bat  source code.rs
final/: run.bat
logs/: 2024-60-17 13-46-13.txt  2024-60-17 13-46-56.txt  2024-60-17 13-47-13.txt  2024-60-17 13-47-23.txt
src/: engine.rs  main.rs
